--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -103,10 +103,11 @@ nav a {
 }
 
 /* main section style */
-main{
+main {
     max-width: 1140px;
     margin: 0 auto;
 }
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -114,24 +115,31 @@ main{
     background: #FFF8F3;
     margin: 130px 0;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 }
-#what-i-do-description{
+
+#what-i-do-description {
     padding: 30px 150px;
 }
+
 /* skill related styles */
-.skill-container{
+.skill-container {
     display: flex;
-}
-.skill{
-    padding: 30px;
     gap: 24px;
 }
-.skill-description{
-    
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
+
+.skill-description {}
