--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -108,6 +108,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 /* about section styles */
 .about {
     padding: 130px;
@@ -142,4 +146,74 @@ main {
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 
-.skill-description {}
+.skill-description {
+    color: #757575;
+}
+
+/* resume column section */
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.resume-column-container {
+    display: flex;
+    gap: 70px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 0px;
+}
+.resume-item-institute{
+    color:  #757575;
+font-size: 20px;
+font-weight: 600;
+margin-top: 0px;
+margin-bottom: 20px;
+
+}
+.resume-item-description{
+    color: #757575;
+font-size: 16px;
+font-weight: 400;
+}
+.resume-column-container hr{
+    margin: 30px 0px;
+}
+.download-cv{
+    text-align: center;
+    margin-top:50px;
+    margin-bottom: 130px;
+}
+/* footer related style */
+footer{
+    display: flex;
+    gap: 117px;
+    padding: 130px 230px;
+    background: #FFF8F3;
+    margin-top: 0px;
+    }
+.footer-column{
+    width: 50%;
+}
+.contact input[type="text"], .contact input[type="email"] ,textarea{
+    display: block;
+    margin-bottom: 24px;
+    border: 0px;
+    padding: 18px 35px;
+    border-radius: 5px;
+background: #FFF;
+width: 80%;
+}
+.social-link a{
+margin-right: 24px;
+}
+.footer-column .section-title, .section-description{
+    text-align: left;
+}
