--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -158,7 +158,7 @@ main section {
     margin-bottom: 30px;
 }
 
-.resume-column-container {
+.rresume-column-container {
     display: flex;
     gap: 70px;
 }
@@ -170,50 +170,62 @@ main section {
     margin-bottom: 10px;
     margin-top: 0px;
 }
-.resume-item-institute{
-    color:  #757575;
-font-size: 20px;
-font-weight: 600;
-margin-top: 0px;
-margin-bottom: 20px;
+
+.resume-item-institute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 20px;
 
 }
-.resume-item-description{
+
+.resume-item-description {
     color: #757575;
-font-size: 16px;
-font-weight: 400;
+    font-size: 16px;
+    font-weight: 400;
 }
-.resume-column-container hr{
+
+.resume-column-container hr {
     margin: 30px 0px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
-    margin-top:50px;
+    margin-top: 50px;
     margin-bottom: 130px;
 }
+
 /* footer related style */
-footer{
+footer {
     display: flex;
     gap: 117px;
     padding: 130px 230px;
     background: #FFF8F3;
     margin-top: 0px;
-    }
-.footer-column{
+}
+
+.footer-column {
     width: 50%;
 }
-.contact input[type="text"], .contact input[type="email"] ,textarea{
+
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
     display: block;
     margin-bottom: 24px;
     border: 0px;
     padding: 18px 35px;
     border-radius: 5px;
-background: #FFF;
-width: 80%;
+    background: #FFF;
+    width: 80%;
 }
-.social-link a{
-margin-right: 24px;
+
+.social-link a {
+    margin-right: 24px;
 }
-.footer-column .section-title, .section-description{
+
+.footer-column .section-title,
+.section-description {
     text-align: left;
 }
