--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -158,13 +158,11 @@ main section {
     margin-bottom: 30px;
 }
 
-.resume-column-container {
-    display:flex;
+.resume-container{
+    display: flex;
     gap: 70px;
+
 }
-
-
-
 .resume-item-title {
     color: #474747;
     font-size: 25px;
@@ -188,7 +186,7 @@ main section {
     font-weight: 400;
 }
 
-.resume-column-container hr {
+.resume-container hr {
     margin: 30px 0px;
 }
 
